fix alignment

--- a/packages/web/styles/globals.css
+++ b/packages/web/styles/globals.css
@@ -110,8 +110,12 @@
     @apply subtitle1 mb-1 border-b-2 border-osmoverse-800 text-osmoverse-300;
   }
 
+  thead > tr > th:first-child {
+    @apply pl-0;
+  }
+
   thead > tr > th {
-    @apply py-2 font-semibold;
+    @apply py-2 px-4 font-semibold;
   }
 
   tbody > tr {
